--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                 <input type="submit" name="submit" value="Search">
             </form>
 
-            <img src="/asset/Bocchi_The_Rock_-removebg-preview.png">
+            <img src="gambar/Bocchi_The_Rock_-removebg-preview.png">
         </div>
 
         <!-- section first page -->
         <div class="main">
             <div class="text">
                 <h1>Kessoku <span>Band</span></h1>
-                <p>Kessoku Band (結束バンド merupakan band yang dibentuk oleh Nijika pada animeh Bocchi The Rock. Pada web
+                <p>Kessoku Band 結束バンド merupakan band yang dibentuk oleh Nijika pada animeh Bocchi The Rock. Pada web
                     ini memudahkan anda untuk membeli tiket konser band yang sedang hits sekarang ini, dan juga beberapa
                     merchendise menarik lainya!!!</p>
 
@@ -35,7 +35,7 @@
 
 
             </div>
-            <img src="/asset/FB_IMG_1675315563601 - Copy already crop.jpg" alt="">
+            <img src="gambar/FB_IMG_1675315563601 - Copy already crop.jpg" alt="">
 
         </div>
 
@@ -47,7 +47,7 @@
             <h3> <span>Band</span> Members</h3>
             <div class="band">
                 <div class="bocchi">
-                    <img src="/asset/bocchi.jpeg">
+                    <img src="gambar/bocchi.jpeg">
                 </div>
                 <div class="text2">
                     <h2>Hitori Gotou</h2>
@@ -66,7 +66,7 @@
             </div>
             <div class="band">
                 <div class="nijika">
-                    <img src="/asset/nijhika.jpeg">
+                    <img src="gambar/nijhika.jpeg">
                 </div>
                 <div class="text2">
                     <h2 style="color: #FFC300;">Nijika Ichiji</h2>
@@ -85,7 +85,7 @@
             </div>
             <div class="band">
                 <div class="ryo">
-                    <img src="/asset/cat ryou.png">
+                    <img src="gambar/cat ryou.png">
                 </div>
                 <div class="text2">
                     <h2 style="color: #0008ff;">Ryo Yamada</h2>
@@ -105,7 +105,7 @@
             </div>
             <div class="band">
                 <div class="kita">
-                    <img src="/asset/kita.jpeg">
+                    <img src="gambar/kita.jpeg">
                 </div>
                 <div class="text2">
                     <h2 style="color: #C70039;">Ikuyo Kita</h2>
@@ -132,7 +132,7 @@
             <h2>Get Merchandise Or Ticket</h2>
 
             <div class="buy">
-                <img src="asset/rock_band_01.jpg" alt="">
+                <img src="gambar/rock_band_01.jpg" alt="">
                 <div class="get">
                     <h3>Get Ticket Now🔥</h3>
                     <P>Sering tidak kedapatan tiket saat membeli offline? sekarang anda dapat membeli tiket secara
@@ -198,7 +198,7 @@
         <footer>
             <div class="wrap">
                 <div class="end">
-                    <img src="asset/Bocchi_The_Rock_-removebg-preview.png" alt="">
+                    <img src="gambar/Bocchi_The_Rock_-removebg-preview.png" alt="">
                     <h3>Go Make some awesome nice</h3>
                     <p>Kessoku band web adalah adalah web untuk mempermudah akses bagi para penggemar kessoku band</p>
                     <p>Made with ❤ In Mawasangka Sulawesi Tenggara</p>
